--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "cross-env": "^6.0.3",
     "jest": "^24.9.0",
     "nodemon": "^2.0.1"
+  },
+  "dependencies": {
+    "chalk": "^3.0.0",
+    "log-update": "^3.3.0"
   }
 }
