--- a/2018/package.json
+++ b/2018/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "log-update": "^4.0.0"
   }
 }
