--- a/2017/package.json
+++ b/2017/package.json
@@ -17,5 +17,7 @@
     "ts-node-dev": "^1.0.0-pre.52",
     "typescript": "^3.9.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chalk": "^4.1.0"
+  }
 }
