install log-update

--- a/2017/package.json
+++ b/2017/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "log-update": "^4.0.0"
   }
 }
