--- a/2018/package.json
+++ b/2018/package.json
@@ -1,19 +1,21 @@
 {
   "name": "2018",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "ts-node app.ts",
+    "dev": "ts-node-dev --respawn app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/node": "^14.0.27",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.57",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "chalk": "^4.1.0",
