--- a/2016/package.json
+++ b/2016/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^3.1.47",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "jest": "^26.4.2",
@@ -19,5 +20,8 @@
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
