--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/crypto-js": "^4.0.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
+    "@types/yargs": "^17.0.7",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
@@ -32,6 +33,7 @@
     "chalk": "^5.0.0",
     "crypto-js": "^4.1.1",
     "inquirer": "^8.2.0",
-    "log-update": "^5.0.0"
+    "log-update": "^5.0.0",
+    "yargs": "^17.2.1"
   }
 }
